<resources>
    <string name="app_name">M01_Calculator</string>
    <string name="app_title">My Calculator App! v2.0</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="result_field">Result</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
</resources>